--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Web Dev Network</title>
   <link rel="icon" type="image/png" href="/images/favicon.png" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="other.js"></script>
+  <script src="./other.js" type="text/javascript"></script>
   <script src="/dist/bundle.js"></script>
 </body>
 
